--- a/index.html
+++ b/index.html
@@ -27,8 +27,15 @@
     // 🧠 Examples of usage:
     // processSingleLearner({ name: "Elisabeth", lovesJS: 1 }) // should return { name: "Elisabeth", lovesJS: true }
     // processSingleLearner({ name: "Pete", age: 23, lovesJS: 0 }) // should return { name: "Pete", age: 23, lovesJS: false }
-    const processSingleLearner = () => {
-
+    const processSingleLearner = (learner) => {
+      if(typeof learner.lovesJS === 'number') {
+        if(learner.lovesJS === 0) {
+          learner.lovesJS = false
+        } else if (learner.lovesJS === 1) {
+          learner.lovesJS = true
+        }
+      }   
+      return learner
     }
 
     // 👉 CHALLENGE 2
@@ -41,8 +48,13 @@
     // ❗ Notes:
     // 🧠 There are many approaches to this problem: using a loop, using forEach, using map...
     // 🧠 Solve this challenge using a for/in loop or a for loop.
-    const processLearnersLoop = () => {
-
+    const processLearnersLoop = (learners) => {
+        let result = []
+        for (let index in learners) {
+          const learner = learners[index]
+          processSingleLearner(learner)
+        }
+       return learners
     }
 
     // 👉 CHALLENGE 3
@@ -51,8 +63,11 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the forEach method of the learners array.
     // 🧠 Use arrow functions whenever possible.
-    const processLearnerForEach = () => {
-
+    const processLearnerForEach = (learners) => {
+        learners.forEach(learner => {
+          processSingleLearner(learner)
+        })
+        return learners
     }
 
     // 👉 CHALLENGE 4
@@ -61,8 +76,9 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the map method of the learners array.
     // 🧠 Use arrow functions.
-    const processLearnerMap = () => {
-
+    const processLearnerMap = (learners) => {
+        const result = learners.map(processSingleLearner)
+        return result
     }
 
     // 👉 CHALLENGE 5
@@ -73,8 +89,20 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the forEach method of the learners array.
     // 🧠 You will need to declare a result array into which you push learners from inside your forEach loop.
-    const getJavaScriptLoversForEach = () => {
+    const getJavaScriptLoversForEach = (learners) => {
+      const jsLovers = [];
 
+  learners.forEach((learner) => {
+    if (learner.lovesJS === true || learner.lovesJS === 1) {
+      jsLovers.push(learner);
+    }
+  });
+
+  if (jsLovers.length === 0) {
+    return "no JS lovers here!";
+  } else {
+    return jsLovers;
+  } 
     }
 
     // 👉 CHALLENGE 6
@@ -82,8 +110,16 @@
     // 🧠 It should work exactly the same as the getJavaScriptLoversForEach function above.
     // ❗ Notes:
     // 🧠 Solve this challenge using the filter method of the learners array.
-    const getJavaScriptLoversFilter = () => {
+    const getJavaScriptLoversFilter = (learners) => {
+      const jsLovers = learners.filter((learner) => {
+    return learner.lovesJS === true || learner.lovesJS === 1;
+  });
 
+  if (jsLovers.length === 0) {
+    return "no JS lovers here!";
+  } else {
+    return jsLovers;
+  }
     }
 
     // 👉 CHALLENGE 7
@@ -98,8 +134,16 @@
     // ❗ Notes:
     // 🧠 This could be solved by using filter to make an array of odd integers, and then using forEach to add them up.
     // 🧠 Or you could opt for solving everything with a single forEach which is the recommended approach (saves a loop).
-    const sumOddInts = () => {
-
+    const sumOddInts = (arrayOfNumbers) => {
+        let result = 0
+        let OddInt = []
+        arrayOfNumbers.forEach((num) => {
+          if(num % 2 !== 0) {
+            result += num
+            OddInt.push(num)
+          }
+        })
+          return [result, OddInt]
     }
 
     // 👉 CHALLENGE 8
@@ -113,8 +157,17 @@
     // checkInts(2, 6) // should return ["even", "even"]
     // ❗ Notes:
     // 🧠 Solve this problem using rest parameters and map.
-    const checkInts = () => {
-
+    const checkInts = (...int) => {
+      if (int.length === 0) {
+        return "pass some arguments, yo!"
+      }
+      return int.map(function(number) {
+        if(number % 2 === 0 ) {
+          return 'even'
+        }  
+          return 'odd'
+        
+      })
     }
 
     // 🧪 TESTS, do not work below this line
